# franka_custom_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: GripperWidth.msg
